--- a/quotes/index.html
+++ b/quotes/index.html
@@ -6,7 +6,7 @@ title: Quotes
 <div class="row">
 <!-- Blog Entries Column -->
 <div class="col-md-8">
-{% for quotes in site.quotes %}
+{% for quote in site.quotes %}
         <!-- Blog Post -->
         <div class="card mb-4">
             <p class="card-header">{{ quote.date | date: '%B %d, %Y' }}</p>
